# backup-container

docker/: backup.objectstore  backup.utils  test.sh
docker/objectstore/: backup.py  pyproject.toml
openshift/templates/backup/: backup-deploy.yaml
