[tool.poetry]
name = "objectstore"
version = "0.1.0"
description = ""
authors = ["Conor Brady <con.brad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiobotocore = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
